--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "^16.0.0",
     "react-apollo": "^2.0.0",
     "react-dom": "^16.0.0",
-    "sillyname": "^0.1.0"
+    "sillyname": "^0.1.0",
+    "yarn": "^1.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
